# brainlesscar

./: .env  Cargo.toml  README.md  pyproject.toml
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: audio.js  index.html  main.js  styles.css  voice.js
server/: Cargo.toml  README.md  blueprint.py  blueprint.rbl
server/src/: command.rs  frame.rs  main.rs  re_ws.rs
