[workspace]
members = ["server"]
default-members = ["server"]
resolver = "3"

[workspace.dependencies]

tokio = { version = "1.43", default-features = false }
anyhow = "1.0.95"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }


axum = { version = "0.8.1", features = ["ws", "multipart", "http2"] }
headers = "0.4.0"
futures-util = "0.3.31"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }

bincode = "1.3.3"
re_log_types = "0.22.0"
re_log_encoding = "0.22.0"
re_memory = "0.22.0"
re_sdk = "0.22.0"
re_tracing = "0.22.0"
re_types = "0.22.0"

ndarray = "0.16.1"

v4l = { version = "0.14.0", default-features = false, features = ["v4l2"] }
bayer = "0.1.5"

chrono = "= 0.4.39" # FIXME: remove, only temp to fix compilation issue with arrow-rs
